--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -5,7 +5,7 @@ on:
     branches: ["master"]
   pull_request:
     branches: ["master"]
-workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   semgrep:
@@ -13,8 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: returntocorp/semgrep
-    step:
+    steps:
     - name: FetchSourceCode
       uses: actions/checkout@v3
     - name: Semgrep
-      run: semgrep ci --config=auto
+      run: semgrep ci --config=auto --sarif --output=semgrep.sarif || true
+    - name: upload
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: semgrep.sarif
+      if: always()
